# nbadge

./: .gitignore  NOTES.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/nbadge/: cli.py  constants.py
