[project]
name = "nbadge"
dynamic = ["version"]
description = "A Python CLI to generate Jupyter notebook badges for different services."
authors = [{ name = "João Palmeiro", email = "joaopalmeiro@proton.me" }]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
mycli = "mycli.__main__:main"

[tool.pdm]
version = { from = "mypackage/__init__.py" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
