[project]
name = "nbadge"
dynamic = ["version"]
description = "A Python CLI to generate Jupyter notebook badges for different services."
authors = [{ name = "João Palmeiro", email = "joaopalmeiro@proton.me" }]
dependencies = ["click>=8.1.3", "pyperclip>=1.8.2"]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
nbadge = "nbadge.cli:main"

[tool.pdm]
version = { source = "file", from = "src/nbadge/__init__.py" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
