[project]
name = "nbadge"
dynamic = ["version"]
description = "Generate badges from Jupyter notebooks hosted on GitHub for different services."
authors = [{ name = "João Palmeiro", email = "joaopalmeiro@proton.me" }]
dependencies = ["click>=8.1.3", "pyperclip>=1.8.2", "giturlparse>=0.10.0"]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
nbadge = "nbadge.cli:main"

[project.urls]
Repository = "https://github.com/joaopalmeiro/nbadge"
Homepage = "https://github.com/joaopalmeiro/nbadge"

[tool.pdm]
version = { source = "file", path = "src/nbadge/__init__.py" }

[tool.pdm.dev-dependencies]
format = ["black>=22.6.0", "isort>=5.10.1"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
atomic = true
